--- a/src/css/coastal_Kingdom.css
+++ b/src/css/coastal_Kingdom.css
@@ -999,7 +999,7 @@ input#map-name:focus-visible{
     max-width: 1024px;
     min-height: calc(100% - 125px);
     border-radius: 10px;
-    background: #F4ECDB;
+    /* background: #F4ECDB; */
 }
 .btn-close{
     background: no-repeat url("../assets/images/btn-close.png");
@@ -1012,6 +1012,9 @@ input#map-name:focus-visible{
     border: none;
     border-radius: 5px;
     z-index: 1;
+}
+.btn-close.close-page{
+    top: 20px;
 }
 .btn-close:hover{
     cursor: pointer;
@@ -1043,7 +1046,7 @@ input#map-name:focus-visible{
     flex-wrap: wrap;
     gap: 10px;
 }
-#village-management #village-name-banner-box{
+#village-name-banner-box{
     position: relative;
     width: 100%;
     height: 45px;
@@ -1083,12 +1086,14 @@ input#edit-village-name:focus-visible{
     background: transparent !important;
 }
 #village-info{
+    position: absolute;
+    margin: 0 auto;
+    bottom: -20px;
+    width: 200px;
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 20px;
-    margin: 0 auto;
-    position: absolute;
-    bottom: -15px;
 }
 #village-info .population,
 #village-info .building,
@@ -1129,8 +1134,8 @@ input#edit-village-name:focus-visible{
 }
 #buildings-box > div{
     border: 10px solid transparent;
-    border-radius: 15px;
-    box-shadow: inset 0 0 5px 1px  #454344;
+    /* border-radius: 15px; */
+    /* box-shadow: inset 0 0 5px 1px  #454344; */
 }
 #buildings-box > div:first-child{
     border-top-left-radius: 0px;
@@ -1143,9 +1148,18 @@ input#edit-village-name:focus-visible{
     align-content: flex-start;
 }
 .townhall-view{
+    border-top-left-radius: unset;
+}
+.display-village-components{
+    display: none;
+    width: 100%;
+    height: 500px;
+    min-height: 500px;
     border: none !important;
     border-top: 10px solid transparent !important;
-    background: #F4ECDB;
+    border-bottom: 10px solid transparent !important;
+    border-top-left-radius: 0px !important;
+    /* background: #F4ECDB; */
     z-index: 1;
 }
 #buildings-box-tabs{
@@ -1168,36 +1182,63 @@ input#edit-village-name:focus-visible{
     cursor: pointer;
     position: relative;
     background-position-x: 20px;
+    border-right: 2px solid #555;
 }
 .buildings-box-btn:hover .info-text{
     display: block;
 }
-.buildings-box-btn.active{
+#buildings-box-tabs .buildings-box-btn.active{
     background-position-x: center;
+    border: none;
 }
-#townhall-btn{
+.townhall-btn{
     background: no-repeat url("../assets/images/hdv-tabs.png");
     background-size: contain;
     background-position-x: 20px;
 } 
-#buildings-btn{
+.buildings-btn{
     background: no-repeat url("../assets/images/buildings-tabs.png");
     background-size: contain;
     background-position-x: 20px;
 } 
-#market-btn{
+.market-btn{
     background: no-repeat url("../assets/images/market-tabs.png");
     background-size: contain;
     background-position-x: 20px;
 } 
-#port-btn{
+.port-btn{
     background: no-repeat url("../assets/images/port-tabs.png");
     background-size: contain;
     background-position-x: 20px;
-} 
-#buildings-box-tabs .buildings-box-btn.active{
-    background-position-x: center;
 }
+.buildings-btn, .market-btn, .port-btn{
+    display: none;
+}
+div#buildings-box-tabs::before {
+    content: '';
+    border-left: 2px solid #5557;
+    position: absolute;
+    height: 300px;
+    right: 0;
+    top: 100%;
+    filter: drop-shadow(-1px 2px 1px black);
+}
+.buildings-box-btn::before {
+    content: '';
+    border-left: 2px solid #5557;
+    position: absolute;
+    height: 12px;
+    left: 46.5px;
+    top: 30px;
+}
+/* .buildings-box-btn.active::before {
+    content: '';
+    border-left: 2px solid #555;
+    position: relative;
+    height: 20px;
+    left: 100%;
+    top: 30px;
+} */
 #townhall-box-1{
     position: relative;
     width: 245px;
@@ -1237,6 +1278,10 @@ input#edit-village-name:focus-visible{
     margin-bottom: 25px;
 }
 .worker{
+    position: relative;
+}
+.worker:hover .info-text{
+    display: block;
 }
 .worker-info,
 .assign-worker-buildings{
@@ -1272,7 +1317,7 @@ input#edit-village-name:focus-visible{
     top: -3%;
     right: -20px;
     width: 20px;
-    height: 106%;
+    height: 56px;
     font-size: 14px;
     background: #937728;
     border: 2px solid #937728;
@@ -1354,7 +1399,11 @@ input#edit-village-name:focus-visible{
     display: block;
 }
 .worker-img{
-    min-width: 56px;
+    background: no-repeat url("../assets/images/workman-avatar.png");
+    background-position: center !important;
+    background-size: 48px !important;
+    position: relative;
+    width: 56px;
     height: 56px;
     border: 2px solid #937728;
     border-radius: 3px;
@@ -1362,18 +1411,10 @@ input#edit-village-name:focus-visible{
     border-top-right-radius: 0px;
     border-bottom-right-radius: 0px;
 }
-.worker-img.manant{
-    background: no-repeat url("../assets/images/manant-avatar.png");
-    background-position: center;
-    background-size: 48px;
-    position: relative;
+.worker-img.peasant{
+    background: no-repeat url("../assets/images/peasant-avatar.png");
 }
-.worker-img.ouvrier{
-    background: no-repeat url("../assets/images/ouvrier-avatar.png");
-    background-size: 48px;
-    background-position: top;
-    position: relative;
-}
+
 .worker-labor,
 .worker-happiness,
 .worker-consumption{
@@ -1421,7 +1462,8 @@ input#edit-village-name:focus-visible{
     display: flex;
     justify-content: center;
 }
-#townhall-view-warehouse .stock .stock-num{
+#townhall-view-warehouse .stock .stock-num,
+.worker-type-num{
     text-align: right;
     padding: 0px 4px;
     background: #937728;
@@ -1429,7 +1471,7 @@ input#edit-village-name:focus-visible{
     position: absolute;
     top: -7px;
     color: #fff;
-    right: -2px;
+    right: -1px;
 }
 #townhall-view-warehouse .stock:hover .info-text{
     display: block;
@@ -1609,7 +1651,8 @@ input#edit-village-name:focus-visible{
     background-size: 32px;
 }
 
-#planConstruction-view .building-planConstruction-img.building-farm{
+#planConstruction-view .building-planConstruction-img.building-farm,
+.amenagements-view .building-img.building-farm{
     background: no-repeat url("../assets/images/farm-2.png");
     background-position: center;
     background-size: contain;
@@ -1617,196 +1660,225 @@ input#edit-village-name:focus-visible{
     border-radius: 2px;
 
 }
-#planConstruction-view .building-planConstruction-img.building-livestock_ranches{
+
+#planConstruction-view .building-planConstruction-img.building-livestock_ranches,
+.amenagements-view .building-img.building-livestock_ranches{
     background: no-repeat url("../assets/images/livestock_ranches-1.png");
     background-position: center;
     background-size: contain;
     border: 1px solid #222;
     border-radius: 2px;
 }
-#planConstruction-view .building-planConstruction-img.building-quarry{
+#planConstruction-view .building-planConstruction-img.building-quarry,
+.amenagements-view .building-img.building-quarry{
     background: no-repeat url("../assets/images/quarry-4.png");
     background-position: center;
     background-size: contain;
     border: 1px solid #222;
     border-radius: 2px;
 }
-#planConstruction-view .building-planConstruction-img.building-lumberjack_hut{
+#planConstruction-view .building-planConstruction-img.building-lumberjack_hut,
+.amenagements-view .building-img.building-lumberjack_hut{
     background: no-repeat url("../assets/images/lumberjack_hut-2.png");
     background-position: center;
     background-size: contain;
     border: 1px solid #222;
     border-radius: 2px;
 }
-#planConstruction-view .building-planConstruction-img.building-fishing_hut{
+#planConstruction-view .building-planConstruction-img.building-fishing_hut,
+.amenagements-view .building-img.building-fishing_hut{
     background: no-repeat url("../assets/images/cabane-18.png");
     background-position: center;
     background-size: contain;
     border: 1px solid #222;
     border-radius: 2px;
 }
-#planConstruction-view .building-planConstruction-img.building-mine{
+#planConstruction-view .building-planConstruction-img.building-mine,
+.amenagements-view .building-img.building-mine{
     background: no-repeat url("../assets/images/mine-2.png");
     background-position: center;
     background-size: contain;
     border: 1px solid #222;
     border-radius: 2px;
 }
-#planConstruction-view .building-planConstruction-img.building-port{
+#planConstruction-view .building-planConstruction-img.building-port,
+.amenagements-view .building-img.building-port{
     background: no-repeat url("../assets/images/port-5.png");
     background-position: center;
     background-size: contain;
     border: 1px solid #222;
     border-radius: 2px;
 }
-#planConstruction-view .building-planConstruction-img.building-market{
+#planConstruction-view .building-planConstruction-img.building-market,
+.amenagements-view .building-img.building-market{
     background: no-repeat url("../assets/images/market-1.png");
     background-position: center;
     background-size: contain;
     border: 1px solid #222;
     border-radius: 2px;
 }
-#planConstruction-view .building-planConstruction-img.building-forge{
+#planConstruction-view .building-planConstruction-img.building-forge,
+.amenagements-view .building-img.building-forge{
     background: no-repeat url("../assets/images/forge-3.png");
     background-position: center;
     background-size: contain;
     border: 1px solid #222;
     border-radius: 2px;
 }
-#planConstruction-view .building-planConstruction-img.building-mill{
+#planConstruction-view .building-planConstruction-img.building-mill,
+.amenagements-view .building-img.building-mill{
     background: no-repeat url("../assets/images/mill-3.png");
     background-position: center;
     background-size: contain;
     border: 1px solid #222;
     border-radius: 2px;
 }
-#planConstruction-view .building-planConstruction-img.building-granary{
+#planConstruction-view .building-planConstruction-img.building-granary,
+.amenagements-view .building-img.building-granary{
     background: no-repeat url("../assets/images/granary-1.png");
     background-position: center;
     background-size: contain;
     border: 1px solid #222;
     border-radius: 2px;
 }
-#planConstruction-view .building-planConstruction-img.building-warehouse{
+#planConstruction-view .building-planConstruction-img.building-warehouse,
+.amenagements-view .building-img.building-warehouse{
     background: no-repeat url("../assets/images/warehouse-4.png");
     background-position: center;
     background-size: contain;
     border: 1px solid #222;
     border-radius: 2px;
 }
-#planConstruction-view .building-planConstruction-img.building-textile_mill{
+#planConstruction-view .building-planConstruction-img.building-textile_mill,
+.amenagements-view .building-img.building-textile_mill{
     background: no-repeat url("../assets/images/textile_mill.png");
     background-position: center;
     background-size: contain;
     border: 1px solid #222;
     border-radius: 2px;
 }
-#planConstruction-view .building-planConstruction-img.building-lumber_mill{
+#planConstruction-view .building-planConstruction-img.building-lumber_mill,
+.amenagements-view .building-img.building-lumber_mill{
     background: no-repeat url("../assets/images/lumber_mill-7.png");
     background-position: center;
     background-size: contain;
     border: 1px solid #222;
     border-radius: 2px;
 }
-#planConstruction-view .building-planConstruction-img.building-dockyard{
+#planConstruction-view .building-planConstruction-img.building-dockyard,
+.amenagements-view .building-img.building-dockyard{
     background: no-repeat url("../assets/images/shipyard-1.png");
     background-position: center;
     background-size: contain;
     border: 1px solid #222;
     border-radius: 2px;
 }
-#planConstruction-view .building-planConstruction-img.building-shipyard{
+#planConstruction-view .building-planConstruction-img.building-shipyard,
+.amenagements-view .building-img.building-shipyard{
     background: no-repeat url("../assets/images/shipyard-3.png");
     background-position: center;
     background-size: contain;
     border: 1px solid #222;
     border-radius: 2px;
 }
-#planConstruction-view .building-planConstruction-img.building-clothing_workshop{
+#planConstruction-view .building-planConstruction-img.building-clothing_workshop,
+.amenagements-view .building-img.building-clothing_workshop{
     background: no-repeat url("../assets/images/clothing_workshop.png");
     background-position: center;
     background-size: contain;
     border: 1px solid #222;
     border-radius: 2px;
 }
-#planConstruction-view .building-planConstruction-img.building-sheep_ranches{
+#planConstruction-view .building-planConstruction-img.building-sheep_ranches,
+.amenagements-view .building-img.building-sheep_ranches{
     background: no-repeat url("../assets/images/sheep_ranches.png");
     background-position: center;
     background-size: contain;
     border: 1px solid #222;
     border-radius: 2px;
 }
-#planConstruction-view .building-planConstruction-img.building-brewery{
+#planConstruction-view .building-planConstruction-img.building-brewery,
+.amenagements-view .building-img.building-brewery{
     background: no-repeat url("../assets/images/cabane-8.png");
     background-position: center;
     background-size: contain;
     border: 1px solid #222;
     border-radius: 2px;
 }
-#planConstruction-view .building-planConstruction-img.building-coffee_workshop{
+#planConstruction-view .building-planConstruction-img.building-coffee_workshop,
+.amenagements-view .building-img.building-coffee_workshop{
     background: no-repeat url("../assets/images/coffee_workshop.png");
     background-position: center;
     background-size: contain;
     border: 1px solid #222;
     border-radius: 2px;
 }
-#planConstruction-view .building-planConstruction-img.building-barracks{
+#planConstruction-view .building-planConstruction-img.building-barracks,
+.amenagements-view .building-img.building-barracks{
     background: no-repeat url("../assets/images/barracks.png");
     background-position: center;
     background-size: contain;
     border: 1px solid #222;
     border-radius: 2px;
 }
-#planConstruction-view .building-planConstruction-img.building-watchtower{
+#planConstruction-view .building-planConstruction-img.building-watchtower,
+.amenagements-view .building-img.building-watchtower{
     background: no-repeat url("../assets/images/watchtower.png");
     background-position: center;
     background-size: contain;
     border: 1px solid #222;
     border-radius: 2px;
 }
-#planConstruction-view .building-planConstruction-img.building-armory{
+#planConstruction-view .building-planConstruction-img.building-armory,
+.amenagements-view .building-img.building-armory{
     background: no-repeat url("../assets/images/armory.png");
     background-position: center;
     background-size: contain;
     border: 1px solid #222;
     border-radius: 2px;
 }
-#planConstruction-view .building-planConstruction-img.building-tobacco_workshop{
+#planConstruction-view .building-planConstruction-img.building-tobacco_workshop,
+.amenagements-view .building-img.building-tobacco_workshop{
     background: no-repeat url("../assets/images/tobacco_workshop.png");
     background-position: center;
     background-size: contain;
     border: 1px solid #222;
     border-radius: 2px;
 }
-#planConstruction-view .building-planConstruction-img.building-cacao_workshop{
+#planConstruction-view .building-planConstruction-img.building-cacao_workshop,
+.amenagements-view .building-img.building-cacao_workshop{
     background: no-repeat url("../assets/images/cacao_workshop.png");
     background-position: center;
     background-size: contain;
     border: 1px solid #222;
     border-radius: 2px;
 }
-#planConstruction-view .building-planConstruction-img.building-jewelry_workshop{
+#planConstruction-view .building-planConstruction-img.building-jewelry_workshop,
+.amenagements-view .building-img.building-jewelry_workshop{
     background: no-repeat url("../assets/images/jewelry_workshop.png");
     background-position: center;
     background-size: contain;
     border: 1px solid #222;
     border-radius: 2px;
 }
-#planConstruction-view .building-planConstruction-img.building-townhall{
+#planConstruction-view .building-planConstruction-img.building-townhall,
+.amenagements-view .building-img.building-townhall{
     background: no-repeat url("../assets/images/townhall-3.png");
     background-position: center;
     background-size: contain;
     border: 1px solid #222;
     border-radius: 2px;
 }
-#planConstruction-view .building-planConstruction-img.building-theater{
+#planConstruction-view .building-planConstruction-img.building-theater,
+.amenagements-view .building-img.building-theater{
     background: no-repeat url("../assets/images/theater.png");
     background-position: center;
     background-size: contain;
     border: 1px solid #222;
     border-radius: 2px;
 }
-#planConstruction-view .building-planConstruction-img.building-perfume_workshop{
+#planConstruction-view .building-planConstruction-img.building-perfume_workshop,
+.amenagements-view .building-img.building-perfume_workshop{
     background: no-repeat url("../assets/images/perfume_workshop.png");
     background-position: center;
     background-size: contain;
@@ -1875,7 +1947,8 @@ input#edit-village-name:focus-visible{
     display: block;
     right: 0;
 }
-#planConstruction-view .building-planConstruction-img{
+#planConstruction-view .building-planConstruction-img,
+.amenagements-view .building-img.building-img{
     width: 64px;
     height: 64px;
     filter: drop-shadow(-1px 2px 0px black);
@@ -1969,4 +2042,8 @@ input#edit-village-name:focus-visible{
 }
 .building-in-queue{
     opacity: 0.5;
+}
+svg{
+    position: absolute;
+    top: 0;
 }
