--- a/src/css/humanBuildings.css
+++ b/src/css/humanBuildings.css
@@ -1,6 +1,8 @@
 
 .amenagements-view .village-amenagements{
-    height: 100%;
+    position: relative;
+    height: 450px;
+    padding-bottom: 25px;
 }
 .amenagements-view .village-buildings,
 .amenagements-view .village-amenagements-list,
@@ -22,7 +24,7 @@
     width: 350px;
     flex-wrap: nowrap;
     gap: 15px;
-    padding-top: 0px;
+    padding: 7px 0px 10px;
 }
 .amenagements-view .village-amenagements .village-buildings-list-title,
 .amenagements-view .village-workshops .village-buildings-list-title{
@@ -48,7 +50,6 @@
     position: relative;
     width: 100%;
     margin-bottom: 5px;
-    line-height: 0.75;
     display: flex;
     flex-direction: column;
     gap: 4px;
@@ -57,10 +58,33 @@
     margin-left: 5px;
 }
 .amenagements-view .building-nextLevelProgress{
-    height: 2px;
+    position: relative;
+    height: 4px;
     width: 100px;
-    background: #fff;
+    background: #000;
     border-radius: 10px;
+    margin-top: 5px;
+}
+.amenagements-view .building-nextLevelProgress .levelProgress{
+    height: 100%;
+    width: 0%;
+    background: #4caf50;
+}
+.amenagements-view .building-nextLevelProgress .upgrade-btn{
+    position: absolute;
+    top: -7px;
+    right: -20px;
+    font-size: 7px;
+    text-align: center;
+    border: 1px solid;
+    border-radius: 2px;
+    width: 15px;
+    height: 15px;
+    padding: 1px;
+}
+.upgrade-btn:hover{
+    cursor: pointer;
+    transform: scale(1.2);
 }
 .amenagements-view .building-workers.workers{
     display: flex;
@@ -161,6 +185,7 @@
 .amenagements-view .production-bonus {
     gap: 20px;
 }
+#backdropClone,
 #village-management-drop {
     position: absolute;
     width: 100%;
@@ -181,4 +206,96 @@
     height: 100%;
     background: conic-gradient(#fff3, #fff0 2% 24%, #fff2 25%, #4321 0, #0000 27% 48%, #9632 50%, #fff2 0, #fff0 52% 73%, #9632 75%, #fff3 0, #fff0 78% 97%, #9632);
   } */
+.msg{
+    display: none;
+    position: absolute;
+    top: -30px;
+    right: 25px;
+    padding: 2px 15px;
+    border-radius: 5px;
+    box-shadow: inset 0px 0px 15px #8f5922;
+    background: RGB(172, 136, 96, 0.5);
+    z-index: 2;
+}
+#backdropClone,
+.village-buildings-show-workers{
+    position: absolute;
+    top: 50px;
+    left: 50%; 
+    width: calc(100% / 3);
+    height: calc(100% - 100px);
+    transform: translate(-50%, 0);
+    padding: 50px 30px 20px;
+    align-content: baseline !important;
+}
+.village-buildings-show-workers{
+    padding-right: 10px !important;
+}
+.village-buildings-show-workers .workers-list{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap !important;
+    gap: 15px !important;
+    height: 100%;
+    padding-top: 10px;
+    padding-right: 20px;
+    overflow-y: overlay;
+}
+.village-buildings-show-workers .workers-list-type-name{
+    position: absolute;
+    top: 15px;
+    width: 100%;
+    text-align: center;
+}
+.village-buildings-show-workers .workers-list-type-name::after{
+    content: '';
+    border-bottom: 2px solid #5557;
+    position: absolute;
+    width: 30%;
+    left: 50%;
+    bottom: 0;
+    transform: translate(-50%, 5px);
+    filter: drop-shadow(0px 2px 1px black);
+}
+#backdropClone{
+    box-shadow: 0px 0px 3px 2px #3335, 0 0 125px #8f5922 inset;
+    filter: url(#wavy2) drop-shadow(0px 0px 6px black);
+    background-size: contain;
+}
 
+.close-show-bBuilding-workers{
+    top: 0;
+    right: 20px;
+}
+.village-buildings-show-workers .worker-info{
+    display: flex !important;
+    height: auto !important;
+    width: 100% !important;
+    overflow: unset !important;
+    position: relative;
+    border-radius: unset;
+    background: unset;
+    box-shadow: unset;
+    padding-bottom: 20px;
+}
+.village-buildings-show-workers .worker-info::after {
+    content: '';
+    border-bottom: 2px solid #5557;
+    position: absolute;
+    width: 100%;
+    left: 0;
+    bottom: 0;
+    filter: drop-shadow(0px 2px 1px black);
+}
+.village-buildings-show-workers .close-worker-info,
+.village-buildings-show-workers .workers-list .worker-info .worker-type{
+    display: none !important;
+}
+.village-buildings-show-workers .worker-info .worker-img{
+    width: 64px;
+    height: 64px;
+    background-size: 64px !important;
+}
+.village-buildings-show-workers .worker-info-header{
+    padding: 0;
+}
