--- a/src/css/humanBuildings.css
+++ b/src/css/humanBuildings.css
@@ -1,5 +1,6 @@
 
-.amenagements-view .village-amenagements{
+.amenagements-view .village-amenagements,
+.amenagements-view .village-workshops{
     position: relative;
     height: 450px;
     padding-bottom: 25px;
@@ -224,7 +225,7 @@
     left: 50%; 
     width: calc(100% / 3);
     height: calc(100% - 100px);
-    transform: translate(-50%, 0);
+    transform: translateX(-50%);
     padding: 50px 30px 20px;
     align-content: baseline !important;
 }
