css update .map_name, utility_obj.js change torn_Kingdom_maps object key

--- a/src/css/coastal_Kingdom.css
+++ b/src/css/coastal_Kingdom.css
@@ -762,6 +762,7 @@ input#map-name:focus-visible{
 .map_name{
     width: 100%;
     text-align: left;
+    text-transform: capitalize;
 }
 .map_num_island{
     width: 100%;
